# course_work4

./: .coverage  README.md  config.py  main.py  pyproject.toml
data/: vacancies.json
src/: headhunter_api.py  utils.py  vacancy.py  worker.py
tests/: test_headhunter_api.py  test_vacancy.py
