[tool.poetry]
name = "course-work4"
version = "0.1.0"
description = ""
authors = ["yura_filchakov <filchakov1993@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
